# onnxruntime-with-CPP-fastapi

./: .gitignore  all_process.py  detector.py  inference_times_python.csv  insight_face_detectio.py  main.py  model-download.py  report_generation.py  sample.py
cpp vs python comparision/: only_python.py  print_numbers.cpp  python_with_cpp.py
models/: .gitignore
ultralytics/ultralytics/examples/YOLOv8-ONNXRuntime-CPP/: CMakeLists.txt
yolov8/: YOLOv8.py  utils.py
yolov8_cpp/: CMakeLists.txt  python_wrapper.py  run_cpp.py  run_python.py  yolov8_infer.cpp  yolov8_infer.h
yolov8_cpp_v2/: CMakeLists.txt  run_cpp.py  yolov8_infer.cpp  yolov8_infer.h
yolov8_onnx_cpp/yolov8-onnx-cpp/: CMakeLists.txt
yolov8_onnx_cpp/yolov8-onnx-cpp/src/: wrapper.cpp
